# CMakeExample

./: CMakeLists.txt
VisualStudioProject/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmakeTest.sln  cmake_install.cmake
VisualStudioProject/myTestApp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  myTestApp.sln  myTestApp.vcxproj  myTestApp.vcxproj.filters
VisualStudioProject/myTestApp/Debug/: myTestApp.ilk
VisualStudioProject/myTestApp/myTestApp.dir/Debug/myTestApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VisualStudioProject/myTestLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  myTestLib.sln  myTestLib.vcxproj  myTestLib.vcxproj.filters
VisualStudioProject/myTestLib/Debug/: myTestLib.lib
VisualStudioProject/myTestLib/myTestLib.dir/Debug/myTestLib.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog  myTestLib.lastbuildstate
VisualStudioProject/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  (+1 more)
myTestApp/: CMakeLists.txt  main.cpp
myTestLib/: CMakeLists.txt
myTestLib/include/mathLibs/: AdvancedFunctions.h  SimpleFunctions.h
myTestLib/src/mathLibs/: AdvancedFunctions.cpp  SimpleFunctions.cpp
